crates/vespertide-query/src/sql/snapshots/vespertide_query__sql__modify_column_nullable__tests__fill_with_now_converted_to_current_timestamp@mysql_fill_now.snap
---
source: crates/vespertide-query/src/sql/modify_column_nullable.rs
expression: sql
---
UPDATE `orders` SET `paid_at` = CURRENT_TIMESTAMP WHERE `paid_at` IS NULL
ALTER TABLE `orders` MODIFY COLUMN `paid_at` timestamp NOT NULL
