crates/vespertide-query/src/sql/snapshots/vespertide_query__sql__modify_column_nullable__tests__fill_with_now_converted_to_current_timestamp@postgres_fill_now.snap
---
source: crates/vespertide-query/src/sql/modify_column_nullable.rs
expression: sql
---
UPDATE "orders" SET "paid_at" = NOW() WHERE "paid_at" IS NULL
ALTER TABLE "orders" ALTER COLUMN "paid_at" SET NOT NULL
