crates/vespertide-query/src/sql/snapshots/vespertide_query__sql__modify_column_nullable__tests__with_default_value@mysql_with_default.snap
---
source: crates/vespertide-query/src/sql/modify_column_nullable.rs
assertion_line: 459
expression: sql
---
ALTER TABLE `users` MODIFY COLUMN `email` text NOT NULL DEFAULT ('default@example.com')
