crates/vespertide-query/src/sql/snapshots/vespertide_query__sql__modify_column_nullable__tests__with_default_value@sqlite_with_default.snap
---
source: crates/vespertide-query/src/sql/modify_column_nullable.rs
assertion_line: 459
expression: sql
---
CREATE TABLE "users_temp" ( "id" integer NOT NULL, "email" text NOT NULL DEFAULT ('default@example.com') )
INSERT INTO "users_temp" ("id", "email") SELECT "id", "email" FROM "users"
DROP TABLE "users"
ALTER TABLE "users_temp" RENAME TO "users"
